scalign fix iphone

--- a/src/components/portfolio/aboutme/aboutme.module.css
+++ b/src/components/portfolio/aboutme/aboutme.module.css
@@ -112,7 +112,7 @@ ul {
     margin-bottom: 100%;
   }
   .paddingbox{
-    padding-top: 9%;
+    padding-top: 8%;
   }
   ul {
     -moz-column-count: 2;
